# OxygenReader

./: .gitignore  README.md  main.py  pyproject.toml  二氧化碳阅读器.spec
