[project]
name = "oxygenreader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "pyinstaller>=6.21.0",
    "pymupdf>=1.28.0",
    "pynput>=1.8.2",
    "pyside6>=6.8.0",
    "requests>=2.34.2",
]
